# fgo-agentic-rag

./: .env.example  .gitignore  LICENSE  README.md  api.py  app.py  config.py  corpus_text.py  pyproject.toml  retrieval.py
agent/: aliases.py  graph.py  llm.py  memory.py  retriever_singleton.py  schemas.py  state.py  structured_lookup.py  subgraph.py
data/: servant_aliases.json
docs/: BENCHMARKS.md
eval/: questions.json  questions_bulk.json  questions_bulk_content.json  scenarios.json
scripts/: build_bm25_index.py  build_corpus.py  build_servants_db.py  build_vector_index.py  eval_ragas.py  eval_recall.py  eval_scenarios.py  fetch_atlas.py  fetch_quest_scripts.py  generate_bulk_eval_questions.py  generate_content_eval_questions.py  quest_raw_loader.py  quest_script_parser.py  scrape_wiki.py  summarize_corpus.py  update_all.py  wiki_raw_loader.py
